--- a/.github/workflows/github-pages-deploy.yml
+++ b/.github/workflows/github-pages-deploy.yml
@@ -37,15 +37,11 @@ jobs:
           node-version: 20
           registry-url: "https://registry.npmjs.org"
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        id: pnpm-install
-        with:
-          version: 9.1.0
-          run_install: true
+      - name: Install yarn
+        run: npm i -g yarn
 
       - name: Build
-        run: pnpm run build
+        run: yarn build
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
