--- a/.github/workflows/github-pages-deploy.yml
+++ b/.github/workflows/github-pages-deploy.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Install yarn
         run: npm i -g yarn
 
+      - name: Install Dependencies
+        run: yarn
+
       - name: Build
         run: yarn build
 
